[gd_scene load_steps=5 format=3 uid="uid://c2c2abf7vi44f"]

[ext_resource type="Script" uid="uid://5bfpenhv5uy" path="res://ui/shop_item.gd" id="1_1xdcd"]
[ext_resource type="PackedScene" uid="uid://dbenponi4fear" path="res://objects/buildings/gunner-building/basic_building.tscn" id="2_5jcd8"]
[ext_resource type="Texture2D" uid="uid://cgh22xrlgqjet" path="res://resources/tile_0085.png" id="2_kdret"]
[ext_resource type="FontFile" uid="uid://cq7ergyalx0ji" path="res://resources/Kenney Rocket Square.ttf" id="4_wjd0c"]

[node name="Shop-item" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1xdcd")
building = ExtResource("2_5jcd8")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 39.0
offset_bottom = 37.0
texture_normal = ExtResource("2_kdret")
stretch_mode = 0

[node name="UpkeepLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 37.0
offset_right = 75.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("4_wjd0c")
theme_override_font_sizes/font_size = 8
text = "UPKEEP: "

[node name="ActiveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 45.0
offset_right = 75.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("4_wjd0c")
theme_override_font_sizes/font_size = 8
text = "ACTIVE: "

[node name="DamageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 53.0
offset_right = 75.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("4_wjd0c")
theme_override_font_sizes/font_size = 8
text = "DAMAGE: "
